feat: add foundational project structure and infrastructure
Initialize complete backend and frontend source directories with
Docker containerization, database migrations, and testing setup.

- Backend: source structure, Alembic migrations, tests, Docker config
- Frontend: Next.js app structure, TypeScript config, Docker setup
- Infrastructure: Docker Compose orchestration, Augment integration
- Cleanup: remove temporary session report documentation

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Ardha - AI-Native Project Management Platform Backend"
 authors = ["ardhaecosystem <ardhaecosystem@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "ardha", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
