--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ qdrant-client = "1.12.1"
 websockets = "13.1"
 celery = "5.4.0"
 gitpython = "3.1.43"
+email-validator = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.3"
