--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2-binary = "2.9.9"
 redis = "5.1.1"
 python-jose = {extras = ["cryptography"], version = "3.3.0"}
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
+bcrypt = "4.1.2"
 python-multipart = "0.0.12"
 httpx = "0.27.2"
 aiofiles = "24.1.0"
