--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ websockets = "13.1"
 celery = "5.4.0"
 gitpython = "3.1.43"
 email-validator = "^2.3.0"
+python-slugify = "^8.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.3"
