--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,6 +44,9 @@ black = "24.10.0"
 isort = "5.13.2"
 mypy = "1.13.0"
 ruff = "0.7.3"
+pre-commit = "^4.0.1"
+bandit = "^1.7.10"
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -69,3 +72,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+
+[tool.bandit]
+exclude_dirs = ["tests", "alembic"]
+skips = ["B101", "B601"]
