feat(ai): implement comprehensive OpenRouter AI integration
- Add production-ready async OpenRouter client with multi-model support
- Implement circuit breaker for fault tolerance (3 failures → 5min cooldown)
- Add retry mechanism with exponential backoff (3 attempts, 1-10s delays)
- Create AI model schemas with 4 pricing tiers (Free, Standard, Premium, Budget)
- Implement token counting with caching and tiktoken support for GPT models
- Add streaming support for real-time AI responses (SSE and JSON handling)
- Create comprehensive request/response schemas with Pydantic v2
- Add real-time cost calculation and budget tracking
- Implement health checks and monitoring capabilities
- Add model routing logic for automatic selection based on task complexity
- Create comprehensive test suite with 100% success rate
- Update configuration with AI settings and environment variables
- Support 4 models: Google Gemini Flash Lite, GLM-4.6, Claude Sonnet 4.5, Grok Code Fast 1

Features:
- Connection pooling (20 keepalive, 100 max connections)
- Timeout management (300s configurable)
- Security headers and user agent identification
- Comprehensive error handling and logging
- Circuit breaker state monitoring
- Token estimation with caching for performance
- Cost tracking for budget management

Test Results:
- Model information retrieval: 4 models available
- Token counting: 12 tokens → /bin/sh.000001 cost estimate
- Non-streaming: 2+2=4 response working
- Streaming: Joke response in chunks working
- Health checks: API healthy, circuit breaker closed
- Circuit breaker: State monitoring verified

This provides foundation for AI Service Layer and LangGraph integration in Phase 2.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,11 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # OpenRouter AI Configuration
 OPENROUTER_API_KEY=your-openrouter-api-key-here
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_TIMEOUT=300
+OPENROUTER_MAX_RETRIES=3
+OPENROUTER_CIRCUIT_BREAKER_THRESHOLD=3
+OPENROUTER_CIRCUIT_BREAKER_COOLDOWN=300
 
 # Application Configuration
 APP_ENV=development
