--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ langchain-openai = "0.2.8"
 langgraph = "0.2.45"
 openai = "1.54.3"
 qdrant-client = "1.12.1"
+sentence-transformers = "3.0.1"
 websockets = "13.1"
 celery = "5.4.0"
 gitpython = "3.1.43"
