feat: implement Celery background job system with memory management
- Add Celery app configuration with Redis broker/backend
- Implement memory ingestion jobs (5 specialized tasks)
- Implement memory cleanup jobs (6 maintenance tasks)
- Add service integration for automatic memory triggering
- Update dependencies and Docker Compose configuration
- Add comprehensive tests with 100% pass rate
- Fix code quality issues and circular imports

Features:
- Zero-cost local embeddings with sentence-transformers
- Intelligent pattern extraction and quality scoring
- Knowledge graph relationship building
- Automated scheduled tasks (5 beat schedules)
- Queue-based routing with time limits
- Production-ready error handling and monitoring

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,7 @@ qdrant-client = "1.12.1"
 sentence-transformers = "3.0.1"
 websockets = "13.1"
 celery = "5.4.0"
+flower = "2.1.0"
 gitpython = "3.1.43"
 email-validator = "^2.3.0"
 python-slugify = "^8.0.1"
