--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,67 @@ services:
       timeout: 10s
       retries: 3
 
+  celery-worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: ardha-celery-worker
+    command: celery -A ardha.core.celery_app worker --loglevel=info --concurrency=2
+    volumes:
+      - ./backend:/app
+      - ./backend/.cache:/app/.cache  # For sentence-transformers model cache
+    mem_limit: 2g
+    restart: unless-stopped
+    env_file:
+      - ./backend/.env
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      qdrant:
+        condition: service_started
+
+  celery-beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: ardha-celery-beat
+    command: celery -A ardha.core.celery_app beat --loglevel=info
+    volumes:
+      - ./backend:/app
+    mem_limit: 512m
+    restart: unless-stopped
+    env_file:
+      - ./backend/.env
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      celery-worker:
+        condition: service_started
+
+  flower:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: ardha-flower
+    command: celery -A ardha.core.celery_app flower --port=5555
+    ports:
+      - "5555:5555"
+    volumes:
+      - ./backend:/app
+    mem_limit: 256m
+    restart: unless-stopped
+    env_file:
+      - ./backend/.env
+    depends_on:
+      redis:
+        condition: service_healthy
+      celery-worker:
+        condition: service_started
+
   frontend:
     build:
       context: ./frontend
