feat: implement comprehensive File and Git API management system
## 🎯 Major Features Added

### File Management System
- **FileService**: 10 core methods for complete file operations
  - create_file(), get_file(), update_file(), delete_file()
  - get_file_content(), update_file_content(), rename_file()
  - list_project_files(), get_file_by_path(), verify_project_access()
- **File REST API**: 8 endpoints with full CRUD operations
  - POST /api/v1/files - Create file with content
  - GET /api/v1/files/{id} - Get file details
  - GET /api/v1/files/{id}/content - Get file with content
  - PATCH /api/v1/files/{id} - Update file metadata
  - PATCH /api/v1/files/{id}/rename - Rename file
  - DELETE /api/v1/files/{id} - Delete file
  - GET /api/v1/files/projects/{project_id}/files - List project files

### Git Commit Management System
- **GitCommitService**: 12 core methods for commit operations
  - create_commit(), get_commit(), list_commits(), link_commit_to_tasks()
  - get_commit_with_files(), get_user_commits(), get_latest_commit()
  - get_commit_stats(), get_project_branches(), verify_project_access()
- **Git REST API**: 10 endpoints for commit management
  - POST /api/v1/git/commits - Create commit
  - GET /api/v1/git/commits/{id} - Get commit details
  - GET /api/v1/git/projects/{project_id}/commits - List commits
  - POST /api/v1/git/commits/{id}/link-tasks - Link tasks to commit
  - GET /api/v1/git/commits/{id}/files - Get commit with files
  - GET /api/v1/git/users/{user_id}/commits - Get user commits
  - GET /api/v1/git/projects/{project_id}/commits/latest - Get latest commit
  - GET /api/v1/git/projects/{project_id}/stats - Get project statistics
  - GET /api/v1/git/projects/{project_id}/branches - Get project branches

## 📁 Files Created

### Core Services (2 files)
- backend/src/ardha/services/file_service.py (10 methods, 400+ lines)
- backend/src/ardha/services/git_commit_service.py (12 methods, 500+ lines)

### REST APIs (2 files)
- backend/src/ardha/api/v1/

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -75,6 +75,12 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+filterwarnings = [
+    "ignore::DeprecationWarning:passlib.*:",
+    "ignore::DeprecationWarning:pydantic.*:",
+    "ignore::DeprecationWarning:jose.*:",
+    "ignore::UserWarning:passlib.*:",
+]
 
 [tool.bandit]
 exclude_dirs = ["tests", "alembic"]
