--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,8 +33,10 @@ qdrant-client = "1.12.1"
 sentence-transformers = "3.0.1"
 websockets = "13.1"
 celery = "5.4.0"
-flower = "2.1.0"
+flower = "^2.0.1"
 gitpython = "3.1.43"
+PyGithub = "^2.1.1"
+cryptography = "^41.0.7"
 email-validator = "^2.3.0"
 python-slugify = "^8.0.1"
 
