--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,8 @@ PyGithub = "^2.1.1"
 cryptography = "^41.0.7"
 email-validator = "^2.3.0"
 python-slugify = "^8.0.1"
+aiosmtplib = "^3.0.0"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.3"
