--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,34 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "next": "15.0.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "typescript": "5.3.3",
+    "zustand": "4.4.7",
+    "@tanstack/react-query": "5.17.9",
+    "swr": "2.2.4",
+    "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-tooltip": "1.0.7",
+    "tailwindcss": "3.4.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "tailwind-merge": "2.2.0",
+    "framer-motion": "10.18.0",
+    "lucide-react": "0.303.0",
+    "react-hook-form": "7.49.3",
+    "zod": "3.22.4",
+    "@hookform/resolvers": "3.3.4",
+    "date-fns": "3.0.6",
+    "lodash": "4.17.21",
+    "@types/lodash": "4.14.202",
+    "nanoid": "5.0.4",
+    "slugify": "1.6.6",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.11",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -17,33 +45,17 @@
     "@codemirror/lang-markdown": "^6.5.0",
     "@codemirror/lang-python": "^6.1.6",
     "@lezer/yaml": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
     "@uiw/react-codemirror": "^4.23.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.7",
-    "lucide-react": "^0.451.0",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.4",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
-    "@types/node": "^22.8.6",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.2",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "@types/node": "20.10.6",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.32",
+    "eslint": "8.56.0",
+    "eslint-config-next": "15.0.2"
   }
 }
