--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - postgres_data:/var/lib/postgresql/data
     mem_limit: 2g
     restart: unless-stopped
+    networks:
+      - ardha-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ardha_user -d ardha_dev"]
       interval: 30s
@@ -27,6 +29,8 @@ services:
       - qdrant_data:/qdrant/storage
     mem_limit: 2560m
     restart: unless-stopped
+    networks:
+      - ardha-network
     environment:
       QDRANT__SERVICE__HTTP_PORT: 6333
       QDRANT__SERVICE__GRPC_PORT: 6334
@@ -42,6 +46,8 @@ services:
       - redis_data:/data
     mem_limit: 512m
     restart: unless-stopped
+    networks:
+      - ardha-network
     command: redis-server --maxmemory 400mb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -70,11 +76,14 @@ services:
         condition: service_healthy
       qdrant:
         condition: service_started
+    networks:
+      - ardha-network
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
   celery-worker:
     build:
@@ -96,6 +105,8 @@ services:
         condition: service_healthy
       qdrant:
         condition: service_started
+    networks:
+      - ardha-network
 
   celery-beat:
     build:
@@ -116,6 +127,8 @@ services:
         condition: service_healthy
       celery-worker:
         condition: service_started
+    networks:
+      - ardha-network
 
   flower:
     build:
@@ -136,28 +149,40 @@ services:
         condition: service_healthy
       celery-worker:
         condition: service_started
+    networks:
+      - ardha-network
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=http://82.29.164.29:8000
+        - NEXT_PUBLIC_WS_URL=ws://82.29.164.29:8000
     container_name: ardha-frontend
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - ./frontend/node_modules:/app/node_modules
     mem_limit: 1g
     restart: unless-stopped
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=http://82.29.164.29:8000
+      - NEXT_PUBLIC_WS_URL=ws://82.29.164.29:8000
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
+    networks:
+      - ardha-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
+
+networks:
+  ardha-network:
+    driver: bridge
 
 volumes:
   postgres_data:
