--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,42 +1,59 @@
-FROM node:20.10-alpine
+# Stage 1: Dependencies
+FROM node:20.10.0-alpine AS deps
+WORKDIR /app
+
+# Install dependencies based on the preferred package manager
+COPY package.json pnpm-lock.yaml* ./
+RUN npm install -g pnpm && pnpm install --frozen-lockfile
+
+# Stage 2: Builder
+FROM node:20.10.0-alpine AS builder
+WORKDIR /app
+
+# Copy dependencies from deps stage
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
+# Set environment variables for build
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
+# Set API URL for build (will be overridden at runtime)
+ARG NEXT_PUBLIC_API_URL=http://82.29.164.29:8000
+ARG NEXT_PUBLIC_WS_URL=ws://82.29.164.29:8000
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_WS_URL=$NEXT_PUBLIC_WS_URL
+
+# Build Next.js application
+RUN npm install -g pnpm && pnpm run build
+
+# Stage 3: Runner
+FROM node:20.10.0-alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # Install curl for health checks
 RUN apk add --no-cache curl
 
-# Set environment variables
-ENV NODE_ENV=development
-ENV NEXT_TELEMETRY_DISABLED=1
-
-# Set work directory
-WORKDIR /app
-
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
-
-# Install pnpm
-RUN npm install -g pnpm
-
-# Install dependencies
-RUN pnpm install --frozen-lockfile
-
-# Copy application code
-COPY . .
-
 # Create non-root user
-RUN addgroup nodejs \
-    && adduser -S -G nodejs nextjs
+RUN addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs
 
-# Change ownership of the node_modules directory
-RUN chown -R nextjs:nodejs /app/node_modules
+# Copy necessary files from builder
+COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-# Expose port
 EXPOSE 3000
 
-# Health check - increased start-period for Next.js compilation
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:3000 || exit 1
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
 
-# Run the application
-CMD ["pnpm", "dev"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:3000/ || exit 1
+
+CMD ["node", "server.js"]
